Tested with using DynamicResources that can be changed at runtime
Changed StaticResources to DynamicResources on MainWindow.xaml. Then created resources for the Font and Margin sizes that can be adjusted at runtime.

--- a/WpfCalculator/WpfCalculator/WpfCalculator.csproj
+++ b/WpfCalculator/WpfCalculator/WpfCalculator.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Classes\AppState.cs" />
     <Compile Include="Classes\SelectedOperator.cs" />
     <Compile Include="Classes\SimpleMath.cs" />
     <Page Include="MainWindow.xaml">
